# ShopLens

./: .gitignore  app.py  database.py  debug_similarity.py  docker-compose.yml  ex2.html  matcher.py  pipeline.py  pyproject.toml  schema.sql  segmentation.py  vector_store.py  visualizer.py
frontend/: app.js  index.html  style.css
tests/: test_similarity_calibration.py
