[project]
name = "shoplens"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "opencv-contrib-python==4.9.0.80",
    "numpy==1.26.4",
    "fastapi==0.111.0",
    "uvicorn[standard]==0.29.0",
    "psycopg2-binary==2.9.9",
    "python-multipart==0.0.9",
    "qdrant-client==1.9.1",
    "python-dotenv>=1.2.2",
    "pgvector>=0.4.2",
]
